--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
+:root {
+    --background-color: #f4d6cc;
+    --text-color: #32373b;
+    --alt-text-color: #4a5859;
+    --x-background-color: #f4b860;
+    --o-background-color: #e05d6d;
+}
+
+body {
+    color: var(--text-color);
+    background-color: var(--background-color);
+    text-align: center;
+    font-family: "Schoolbell", sans-serif;
+}
+
+dialog::backdrop {
+    background-color: darkblue;
+}
+
 .board {
     width: 300px;
     height: 300px;
+    margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -9,5 +29,17 @@
 .cell {
     width: 100px;
     height: 100px;
-    font-size: 2rem;
+    font-size: 3rem;
+    color: var(--alt-text-color);
+    border: 1px solid var(--alt-text-color);
+    border-radius: 0;
+    font-family: "Schoolbell", sans-serif;
+}
+
+.cell.x {
+    background-color: var(--x-background-color);
+}
+
+.cell.o {
+    background-color: var(--o-background-color);
 }
