--- a/style.css
+++ b/style.css
@@ -24,17 +24,17 @@ dialog > form {
     gap: 2rem;
 }
 
-form > button {
+.realButton {
     color: var(--background-color);
     background-color: var(--alt-text-color);
     border: none;
-    padding: 8px 0;
+    padding: 8px 16px;
     font-size: 1.5rem;
     font-family: "Schoolbell", sans-serif;
     border-radius: 50px;
 }
 
-form > button:hover {
+.realButton:hover {
     background-color: var(--background-color);
     color: var(--alt-text-color);
 }
